--- a/contactApp/templates/contact.html
+++ b/contactApp/templates/contact.html
@@ -109,7 +109,7 @@
         }
         
         //标注点数组
-        var markerArr = [{title:"恒达科技有限公司",content:"pyth&nbsp;web企业门户网站开发实战",point:"113.414628|23.050064",isOpen:0,icon:{w:21,h:21,l:0,t:0,x:6,lb:5}}
+        var markerArr = [{title:"恒达科技有限公司",content:"python&nbsp;web企业门户网站开发实战",point:"113.414628|23.050064",isOpen:0,icon:{w:21,h:21,l:0,t:0,x:6,lb:5}}
              ];
         //创建marker
         function addMarker(){
