--- a/homeApp/templates/index.html
+++ b/homeApp/templates/index.html
@@ -4,5 +4,239 @@
 {% block title %}首页{% endblock title %}
 
 {% block content %}
+<link rel="stylesheet" href="{% static 'css/home.css' %}">
+<script src="{% static 'js/jqthumb.min.js' %}"></script>
+<script>
+    // 处理缩略图
+    function DrawImage(hotimg) {
+        $(hotimg).jqthumb({
+            width: '100%',
+            height: '250px',
+            zoom: '1',
+            method: 'auto',
+        });
+    }
+</script>
+
+<div id="ad" class="carousel slide" data-ride="carousel" data-interval="5000">
+    <ol class="carousel-indicators">
+        <li data-target="#ad" data-slide-to="0" class="active"></li>
+        <li data-target="#ad" data-slide-to="1" class=""></li>
+        <li data-target="#ad" data-slide-to="2" class=""></li>
+    </ol>
+    <div class="carousel-inner">
+        <div class="item active">
+            <img alt="广告横幅1" src="{% static 'img/banner1.jpg' %}">
+        </div>
+        <div class="item">
+            <img alt="广告横幅2" src="{% static 'img/banner2.jpg' %}">
+        </div>
+        <div class="item">
+            <img alt="广告横幅3" src="{% static 'img/banner3.jpg' %}">
+        </div>
+    </div>
+    <a class="left carousel-control" href="#ad" data-slide="prev"><span class="glyphicon glyphicon-chevron-left"></span></a>
+    <a class="right carousel-control" href="#ad" data-slide="next"><span class="glyphicon glyphicon-chevron-right"></span></a>
+</div>
+
+<div class="container">
+    
+    <div class="row row-3">
+        <div class="col-md-4">
+            <!-- 企业概况 -->
+            <span class="part1">
+                <a href="{% url 'aboutApp:survey' %}">企业概况</a>
+            </span>
+            <span class="part1 en">
+                &nbsp;&nbsp;/ About Us
+            </span>
+            <div class="line1">
+                <div class="line2 theme"></div>
+            </div>
+            <div>
+                <img src="{% static 'img/aboutCompany.jpg' %}" class="img-responsive">
+                <p class="text1">
+                    恒达科技有限企业，位于中国某高新技术产业开发区, 
+                    以社会公共安全领域为主要应用方向，提供极速、准确和防伪装的人脸识别产品。
+                </p>
+            </div>
+        </div>
+        <div class="col-md-8">
+            <!-- 新闻动态 -->
+            <span class="part1">
+                <a href="#">新闻动态</a>
+            </span>
+            <span class="part1 en">
+                &nbsp;&nbsp;/ News
+            </span>
+            <a href="{% url 'newsApp:news' 'company' %}" 
+                class="btn btn-default btn-xs more-btn">+&nbsp;更多</a>
+            <div class="line1">
+                <div class="line2 theme"></div>
+            </div>
+            <div class="col-md-5">
+                <div id="myCarousel" class="carousel slide" data-ride="carousel">
+                    <ol class="carousel-indicators nav-point">
+                        {% for post in postList %}
+                        <li data-target="#myCarousel" data-slide-to="{{ forloop.counter0 }}" 
+                            {% if forloop.first %}class="active"{% endif %}></li>
+                        {% endfor %}
+                    </ol>
+                    <div class="carousel-inner">
+                        {% for post in postList %}
+                        <div class={% if forloop.first %}"item active"{% else %}"item"{% endif %}>
+                            <a href="{% url 'newsApp:newsDetail' post.id %}">
+                                <img src="{{ post.photo.url }}" class="img-responsive" onload="DrawImage(this)">
+                            </a>
+                            <div class="carousel-caption nav-title">{{ post.title }}</div>
+                        </div>
+                        {% endfor %}
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-7">
+                <ul class="list-unstyled list-new">
+                    {% for news in newsList %}
+                    <li>
+                        <a href="{% url 'newsApp:newsDetail' news.id %}">
+                            {{ news.title|truncatechars:"25" }}
+                        </a>
+                        <span>【{{ news.publish_date|date:"Y-m-d" }}】</span>
+                    </li>
+                    {% endfor %}
+                </ul>
+            </div>
+        </div>
+    </div>
+
+    <div class="row row-3">
+        <div class="col-md-4">
+            <!-- 通知公告 -->
+            <span class="part1">
+                <a href="#">通知公告</a>
+            </span>
+            <span class="part1 en">
+                &nbsp;&nbsp;/ Public Release
+            </span>
+            <a href="{% url 'newsApp:news' 'notice' %}" 
+                class="btn btn-default btn-xs more-btn">+&nbsp;更多</a>
+            <div class="line1">
+                <div class="line2 theme"></div>
+            </div>
+            <div>
+                <img src="{% static 'img/note.jpg' %}" class="img-responsive">
+                <ul class="list-unstyled list-new">
+                    {% for note in noteList %}
+                    <li>
+                        <a href="{% url 'newsApp:newsDetail' note.id %}">
+                            {{ note.title|truncatechars:"25" }}
+                        </a>
+                        <a href="{% url 'newsApp:newsDetail' note.id %}" class="public-detail">
+                            查看详情>>
+                        </a>
+                    </li>
+                    {% endfor %}
+                </ul>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <!-- 科研基地 -->
+            <span class="part1">
+                <a href="{% url 'scienceApp:science' %}">科研基地</a>
+            </span>
+            <span class="part1 en">
+                &nbsp;&nbsp;/ Technology Center
+            </span>
+            <div class="line1">
+                <div class="line2 theme"></div>
+            </div>
+            <div>
+                <a href="{% url 'scienceApp:science' %}">
+                    <img src="{% static 'img/ky.jpg' %}" class="img-responsive">
+                </a>
+                <p class="text1">
+                    <font color="#d30a1c">恒达科技科研基地</font>
+                    恒达科研基地分为计算机视觉、 机器人和视觉深度学习三个事业部，共拥有高级研发人员近30名，
+                    以各领域高级工程师和知名院校博士为主体的多层次研发梯队。当前，科研基地优秀的技术团队
+                    已为恒达在人脸识别、物联网平台搭建、机器人导航等 领域打下了坚实基础
+                </p>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <!-- 联系我们 -->
+            <span class="part1">
+                <a href="{% url 'contactApp:contact' %}">联系我们</a>
+            </span>
+            <span class="part1 en">
+                &nbsp;&nbsp;/ Contact Us
+            </span>
+            <div class="line1">
+                <div class="line2 theme"></div>
+            </div>
+            <div>
+                <ul class="list-unstyled procurement-li">
+                    <li><span>业务质询一：</span>111-111111</li>
+                    <li><span>业务质询二：</span>222-222222</li>
+                    <li><span>咨询电话：</span>011-111111</li>
+                    <li><span>企业传真：</span>022-222222</li>
+                    <li><span>地址：</span>某某大道某某号</li>
+                    <li><span>邮编：</span>222-222222</li>
+                    <li><span>网址：</span><a href="http://192.168.1.103:8000">http://192.168.1.103:8000</a></li>
+                </ul>
+                <div class="platform"><a href="{% url 'contactApp:contact' %}">详情</a></div>
+            </div>
+        </div>
+    </div>
+    
+    <div class="row row-3">
+        <!-- 产品中心 -->
+        <div class="col-md-12 col-pro">
+            <span class="part1">
+                <a href="{% url 'productsApp:products' 'robot' %}">产品中心</a>
+            </span>
+            <span class="part1 en">
+                &nbsp;&nbsp;/ Products
+            </span>
+            <a href="{% url 'productsApp:products' 'robot' %}" 
+                class="btn btn-default btn-xs more-btn">+&nbsp;更多</a>
+            <div class="line1">
+                <div class="line2 theme"></div>
+            </div>
+            <div class="col-md-12 col-pro">
+                <div id="Carousel" class="carousel slide" style="margin-bottom:30px;">
+                    <ol class="carousel-indicators" style="display:none;">
+                        <li data-target="#Carousel" data-slide-to="0" class="active"></li>
+                    </ol>
+                    <div class="carousel-inner">
+                        <div class="item active">
+                            <div class="row">
+                                {% for product in productList %}
+                                    <div class="col-md-3 pro-images">
+                                        <a href="{% url 'productsApp:productDetail' product.id %}" class="thumbnail">
+                                            {% for img in product.product_imgs.all %}
+                                            {% if forloop.first %}
+                                            <img src="{{ img.photo.url }}" alt="产品图片" class="img-responsive" onload="DrawImage(this)">
+                                            {% endif %}
+                                            {% endfor %}
+                                            <div class="carousel-caption nav-title">{{ product.title }}</div>
+                                        </a>
+                                    </div>
+                                {% endfor %}
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="row row-3">
+        <!-- 友情链接 -->
+        <div class="col-md-12">
+
+        </div>
+    </div>
+
+</div>
 
 {% endblock content %}
